# engram

./: .gitignore  pyproject.toml
.runpod/: resources.pkl
docker/: build_and_push.ps1  build_and_push.sh
docker/vllm-worker/: .dockerignore  Dockerfile  handler.py
engram/: __init__.py  config.py  runpod_api.py
engram/graph/: __init__.py  ann_index.py  memory_graph.py
engram/models/: __init__.py  edge_classifier.py  encoder.py  synthesis.py
engram/pipeline/: __init__.py  consolidation.py  query.py  write.py
engram/training/: datagen.py  datasets.py  losses.py  train_edge_classifier.py  train_encoder.py  train_synthesis.py
scripts/: deploy_training.py  deploy_vllm.py  generate_data.py  runpod_train.py  runpod_train.sh  train.py
test_data_check/: edges.jsonl  memories.jsonl  retrieval.jsonl  stats.json  synthesis.jsonl
tests/: test_smoke.py
